gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/issue-60371.rs
// ignore-compare-mode-chalk

trait Bug {
    type Item: Bug;

    const FUN: fn() -> Self::Item;
}

impl Bug for &() {
    type Item = impl Bug; // { dg-error ".E0277." "" { target *-*-* } }
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }

    const FUN: fn() -> Self::Item = || ();
}

fn main() {}

